# lectureforge

./: .env  README.md  pyproject.toml
src/: __init__.py  animations.py  concat_video.py  main.py  manim_generator.py  tts_generator.py  video_generator.py
src/frontend/: app.js  index.html  style.css
